tests/errors/function_too_few_args.py
# expect_error: TypeError
def add(a, b):
    return a + b

print(add(1))